--- a/alacritty.toml
+++ b/alacritty.toml
@@ -2,21 +2,20 @@ import = [
     "~/.config/alacritty/themes/themes/kanagawa_wave.toml"
 ]
 
-[env]
-WINIT_X11_SCALE_FACTOR = "1.5"
-
+# [env]
+# WINIT_X11_SCALE_FACTOR = "1.5"
+#
 [font]
-size = 16
+size = 21
 
 [window]
 opacity = 0.9
-decorations = "None"
+decorations = "Buttonless"
 
 [font.normal]
 family="UbuntuMono Nerd Font"
 
 [window.padding]
-x = 7
-y = 0
-
+x = 5
+y = 8
 
